--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "dist",
     "rootDir": "src",
     "module": "esnext",
-    "target": "esnext",
+    "target": "es5",
     "declaration": true,
     "lib": ["es6", "dom"],
     "sourceMap": true,
@@ -18,6 +18,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "baseUrl": "./src",
+    "importHelpers": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
   },
