--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,12 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "prettier.stylelintIntegration": true,
   "editor.formatOnSave": true,
-  // "typescript.extension.sortImports.sortMethod": "path",
-  // "typescript.extension.sortImports.maxNamedImportsInSingleLine": 20,
-  // "typescript.extension.sortImports.pathSortOrder": [
-  //   "package",
-  //   "relativeDownLevel",
-  //   "relativeUpLevel"
-  // ],
+  "typescript.extension.sortImports.sortMethod": "path",
+  "typescript.extension.sortImports.maxNamedImportsInSingleLine": 20,
+  "typescript.extension.sortImports.pathSortOrder": [
+    "package",
+    "relativeDownLevel",
+    "relativeUpLevel"
+  ],
   "git.ignoreLimitWarning": true
 }
