--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-coat",
   "version": "0.1.0",
-  "description":
-    "A Micro-Framework for React + Redux + Redux-Saga + React-Router",
+  "description": "A Micro-Framework for React + Redux + Redux-Saga + React-Router",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "unpkg": "dist/index.min.js",
   "scripts": {
-    "build": "rollup -c"
+    "dev": "cross-env NODE_ENV=development rollup -c",
+    "build": "cross-env NODE_ENV=production rollup -c"
   },
   "repository": {
     "type": "git",
@@ -21,22 +22,25 @@
     "access": "public"
   },
   "homepage": "https://github.com/wooline/react-coat#readme",
-  "appDependencies":{
+  "glbDependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
+  },
+  "dependencies": {
+    "history": "^4.7.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
     "babel-eslint": "^8.2.1",
+    "cross-env": "^5.1.4",
     "eslint": "^4.17.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-config-standard-jsx": "^4.0.2",
@@ -46,13 +50,19 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
-    "prettier": "^1.10.2",
+    "prettier": "1.10.2",
     "prettier-eslint": "^8.8.1",
     "prettier-stylelint": "^0.4.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "rollup": "^0.56.3",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-tslint": "^0.1.34",
     "rollup-plugin-typescript2": "^0.11.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "tslint": "^5.9.1",
