--- a/package.json
+++ b/package.json
@@ -22,13 +22,7 @@
     "access": "public"
   },
   "homepage": "https://github.com/wooline/react-coat#readme",
-  "glbDependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
-  },
-  "dependencies": {
+  "peerDependencies": {
     "@types/history": "^4.6.2",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
@@ -36,11 +30,22 @@
     "@types/react-router-dom": "^4.2.4",
     "@types/react-router-redux": "^5.0.12",
     "history": "^4.7.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux-saga": "^0.16.0"
   },
+  "dependencies": {},
   "devDependencies": {
+    "@types/history": "^4.6.2",
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^5.0.15",
+    "@types/react-router-dom": "^4.2.4",
+    "@types/react-router-redux": "^5.0.12",
     "babel-eslint": "^8.2.1",
     "cross-env": "^5.1.4",
     "eslint": "^4.17.0",
@@ -52,13 +57,17 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
+    "history": "^4.7.2",
     "prettier": "1.10.2",
     "prettier-eslint": "^8.8.1",
     "prettier-stylelint": "^0.4.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "rollup": "^0.56.3",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-node-resolve": "^3.0.3",
