升级redux和其它至最新版

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,5 @@
   "files.eol": "\n",
   "typescript.tsdk": "node_modules/typescript/lib",
   "prettier.stylelintIntegration": true,
-  "editor.formatOnSave": true,
-  "typescript.extension.sortImports.sortMethod": "path",
-  "typescript.extension.sortImports.maxNamedImportsInSingleLine": 20,
-  "typescript.extension.sortImports.pathSortOrder": [
-    "package",
-    "relativeDownLevel",
-    "relativeUpLevel"
-  ],
-  "git.ignoreLimitWarning": true
+  "editor.formatOnSave": true
 }
