--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-coat",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A Micro-Framework for React + Redux + Redux-Saga + React-Router",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,62 +23,50 @@
   },
   "homepage": "https://github.com/wooline/react-coat#readme",
   "peerDependencies": {
-    "@types/history": "^4.6.2",
-    "@types/react": "^16.0.38",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-redux": "^5.0.15",
-    "@types/react-router-dom": "^4.2.4",
-    "@types/react-router-redux": "^5.0.12",
-    "history": "^4.7.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "@types/history": "^4.0.0",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
+    "@types/react-redux": "^5.0.0",
+    "@types/react-router-dom": "^4.0.0",
+    "@types/react-router-redux": "^5.0.0",
+    "history": "^4.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^5.0.0",
+    "redux": "^3.0.0",
     "redux-saga": "^0.16.0"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@types/history": "^4.6.2",
-    "@types/react": "^16.0.38",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-redux": "^5.0.15",
-    "@types/react-router-dom": "^4.2.4",
-    "@types/react-router-redux": "^5.0.12",
-    "babel-eslint": "^8.2.1",
+    "@types/react": "^16.3.13",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^5.0.19",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-router-redux": "^5.0.13",
     "cross-env": "^5.1.4",
-    "eslint": "^4.17.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-config-standard-jsx": "^4.0.2",
-    "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.6.1",
-    "eslint-plugin-standard": "^3.0.1",
     "history": "^4.7.2",
-    "prettier": "1.10.2",
-    "prettier-eslint": "^8.8.1",
-    "prettier-stylelint": "^0.4.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "rollup": "^0.56.3",
-    "rollup-plugin-commonjs": "^8.3.0",
-    "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup": "^0.58.2",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-tslint": "^0.1.34",
-    "rollup-plugin-typescript2": "^0.11.1",
+    "rollup-plugin-typescript2": "^0.13.0",
     "rollup-plugin-uglify": "^3.0.0",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0",
     "tslint": "^5.9.1",
-    "tslint-config-standard": "^7.0.0",
-    "tslint-react": "^3.4.0",
-    "typescript": "^2.6.2"
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.8.3"
+  },
+  "devDependencies": {
+    
   }
 }
