--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-redux": "^5.0.0",
     "react-router-dom": "^4.0.0",
     "react-router-redux": "^5.0.0",
-    "redux": "^3.0.0",
+    "redux": "^3.0.0 || ^4.0.0",
     "redux-saga": "^0.16.0"
   },
   "dependencies": {
@@ -66,7 +66,5 @@
     "tslint-react": "^3.5.1",
     "typescript": "^2.8.3"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
