修复redux4.0引起的bug

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-coat",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A Micro-Framework for React + Redux + Redux-Saga + React-Router",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -38,7 +38,8 @@
     "redux": "^3.0.0 || ^4.0.0",
     "redux-saga": "^0.16.0"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@types/history": "^4.6.2",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
@@ -65,6 +66,5 @@
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
     "typescript": "^2.8.3"
-  },
-  "devDependencies": {}
+  }
 }
