替换react-router-redux

--- a/package.json
+++ b/package.json
@@ -28,31 +28,28 @@
     "@types/react-dom": "^16.0.0",
     "@types/react-redux": "^5.0.0",
     "@types/react-router-dom": "^4.0.0",
-    "@types/react-router-redux": "^5.0.0",
     "history": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.0",
     "react-router-dom": "^4.0.0",
-    "react-router-redux": "^5.0.0",
     "redux": "^3.0.0 || ^4.0.0",
     "redux-saga": "^0.16.0"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/history": "^4.6.2",
-    "@types/react": "^16.3.17",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.2",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/react-router-redux": "^5.0.15",
+    "@types/history": "4.6.2",
+    "@types/react": "16.3.13",
+    "@types/react-dom": "16.0.6",
+    "@types/react-redux": "6.0.2",
+    "@types/react-router-dom": "4.2.7",
     "cross-env": "^5.1.4",
     "history": "^4.7.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "connected-react-router": "^4.3.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "rollup": "^0.58.2",
