--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-coat",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "A Micro-Framework for React + Redux + Redux-Saga + React-Router",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,6 +28,7 @@
     "@types/react-dom": "^16.0.0",
     "@types/react-redux": "^5.0.0",
     "@types/react-router-dom": "^4.0.0",
+    "connected-react-router": "^4.0.0",
     "history": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -43,15 +44,15 @@
     "@types/react-dom": "16.0.6",
     "@types/react-redux": "6.0.2",
     "@types/react-router-dom": "4.2.7",
+    "connected-react-router": "4.3.0",
     "cross-env": "^5.1.4",
     "history": "^4.7.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "connected-react-router": "^4.3.0",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.2.2",
+    "redux": "4.0.0",
+    "redux-saga": "0.16.0",
     "rollup": "^0.58.2",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0",
