--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/react-router-dom": "4.2.7",
     "connected-react-router": "4.3.0",
     "cross-env": "^5.1.4",
-    "history": "^4.7.2",
+    "history": "4.7.2",
     "react": "16.4.0",
     "react-dom": "16.4.0",
     "react-redux": "5.0.7",
