--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "stylelint-config-standard": "^18.2.0",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
-    "typescript": "2.8.3"
+    "typescript": "^3.0.1"
   }
 }
