--- a/.editorconfig
+++ b/.editorconfig
@@ -5,11 +5,8 @@ root = true
 indent_style = space
 indent_size = 2
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
-
-[Makefile]
-indent_style = tab
+[**.bat]
+end_of_line = crlf
