--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "react-coat",
-  "version": "3.1.0",
-  "description": "A Micro-Framework for React + Redux + Redux-Saga + React-Router",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "unpkg": "dist/index.min.js",
+  "version": "4.0.0",
+  "description": "Structured React + Redux with Typescript and support for isomorphic rendering beautifully(SSR)",
+  "main": "build/dist/index.js",
+  "module": "build/es5/index.js",
+  "types": "build/es6/index.d.ts",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development rollup -c",
-    "build": "cross-env NODE_ENV=production rollup -c"
+    "build": "node scripts/build.js"
   },
   "repository": {
     "type": "git",
@@ -22,47 +21,51 @@
     "access": "public"
   },
   "homepage": "https://github.com/wooline/react-coat#readme",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "peerDependencies": {
+    "@types/node": "^9.0.0 || ^10.0.0",
     "@types/history": "^4.0.0",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
-    "@types/react-redux": "^5.0.0",
+    "@types/react-redux": "^5.0.0 || ^6.0.0",
     "@types/react-router-dom": "^4.0.0",
-    "connected-react-router": "^4.0.0",
+    "connected-react-router": "^4.0.0 || ^5.0.0",
     "history": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.0",
     "react-router-dom": "^4.0.0",
-    "redux": "^3.0.0 || ^4.0.0",
-    "redux-saga": "^0.16.0"
+    "redux": "^3.0.0 || ^4.0.0"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/history": "4.6.2",
-    "@types/react": "16.3.17",
-    "@types/react-dom": "16.0.6",
-    "@types/react-redux": "6.0.2",
-    "@types/react-router-dom": "4.2.7",
-    "connected-react-router": "4.3.0",
-    "cross-env": "^5.1.4",
+    "@types/node": "10.12.2",
+    "@types/react": "16.4.18",
+    "@types/react-dom": "16.0.9",
+    "@types/react-redux": "6.0.9",
+    "@types/react-router-dom": "4.3.1",
+    "babel-eslint": "10.0.1",
+    "chalk": "2.4.1",
+    "connected-react-router": "5.0.1",
+    "eslint": "5.8.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "3.3.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-prettier": "3.0.0",
+    "fs-extra": "7.0.0",
     "history": "4.7.2",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
-    "react-redux": "5.0.7",
+    "prettier": "1.15.2",
+    "react": "16.5.0",
+    "react-dom": "16.5.0",
+    "react-redux": "5.1.0",
     "react-router-dom": "4.3.1",
-    "redux": "4.0.0",
-    "redux-saga": "0.16.0",
-    "rollup": "^0.58.2",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-tslint": "^0.1.34",
-    "rollup-plugin-typescript2": "^0.13.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "stylelint": "^9.2.0",
-    "stylelint-config-standard": "^18.2.0",
-    "tslint": "^5.9.1",
-    "tslint-react": "^3.5.1",
-    "typescript": "^3.0.1"
+    "redux": "4.0.1",
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.15.0",
+    "tslint-plugin-prettier": "2.0.1",
+    "tslint-react": "3.6.0",
+    "typescript": "3.2.1"
   }
 }
