--- a/package.json
+++ b/package.json
@@ -41,31 +41,31 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "10.12.2",
-    "@types/react": "16.4.18",
-    "@types/react-dom": "16.0.9",
-    "@types/react-redux": "6.0.9",
-    "@types/react-router-dom": "4.3.1",
-    "babel-eslint": "10.0.1",
-    "chalk": "2.4.1",
-    "connected-react-router": "5.0.1",
-    "eslint": "5.8.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-config-prettier": "3.3.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-prettier": "3.0.0",
-    "fs-extra": "7.0.0",
-    "history": "4.7.2",
-    "prettier": "1.15.2",
-    "react": "16.5.0",
-    "react-dom": "16.5.0",
-    "react-redux": "5.1.0",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.1",
-    "tslint": "5.11.0",
-    "tslint-config-prettier": "1.15.0",
-    "tslint-plugin-prettier": "2.0.1",
-    "tslint-react": "3.6.0",
-    "typescript": "3.2.1"
+    "@types/node": "~10.12.2",
+    "@types/react": "~16.4.18",
+    "@types/react-dom": "~16.0.9",
+    "@types/react-redux": "~6.0.9",
+    "@types/react-router-dom": "~4.3.1",
+    "babel-eslint": "~10.0.1",
+    "chalk": "~2.4.1",
+    "connected-react-router": "~5.0.1",
+    "eslint": "~5.8.0",
+    "eslint-config-airbnb-base": "~13.1.0",
+    "eslint-config-prettier": "~3.3.0",
+    "eslint-plugin-import": "~2.14.0",
+    "eslint-plugin-prettier": "~3.0.0",
+    "fs-extra": "~7.0.0",
+    "history": "~4.7.2",
+    "prettier": "~1.15.2",
+    "react": "~16.5.0",
+    "react-dom": "~16.5.0",
+    "react-redux": "~5.1.0",
+    "react-router-dom": "~4.3.1",
+    "redux": "~4.0.1",
+    "tslint": "~5.11.0",
+    "tslint-config-prettier": "~1.15.0",
+    "tslint-plugin-prettier": "~2.0.1",
+    "tslint-react": "~3.6.0",
+    "typescript": "~3.2.1"
   }
 }
