--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-coat",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "Structured React + Redux with Typescript and support for isomorphic rendering beautifully(SSR)",
   "main": "build/dist/index.js",
   "module": "build/es5/index.js",
@@ -42,15 +42,19 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^23.3.13",
+    "@types/enzyme": "~3.1.18",
+    "@types/enzyme-adapter-react-16": "~1.0.4",
+    "@types/jest": "~24.0.6",
     "@types/node": "~10.12.2",
-    "@types/react": "~16.4.18",
+    "@types/react": "~16.8.3",
     "@types/react-dom": "~16.0.9",
     "@types/react-redux": "~6.0.9",
     "@types/react-router-dom": "~4.3.1",
     "babel-eslint": "~10.0.1",
     "chalk": "~2.4.1",
     "connected-react-router": "~5.0.1",
+    "enzyme": "~3.9.0",
+    "enzyme-adapter-react-16": "~1.9.1",
     "eslint": "~5.8.0",
     "eslint-config-airbnb-base": "~13.1.0",
     "eslint-config-prettier": "~3.3.0",
@@ -58,14 +62,14 @@
     "eslint-plugin-prettier": "~3.0.0",
     "fs-extra": "~7.0.0",
     "history": "~4.7.2",
-    "jest": "^23.6.0",
+    "jest": "~24.1.0",
     "prettier": "~1.15.2",
     "react": "~16.5.0",
     "react-dom": "~16.5.0",
     "react-redux": "~5.1.0",
     "react-router-dom": "~4.3.1",
     "redux": "~4.0.1",
-    "ts-jest": "~23.10.5",
+    "ts-jest": "~24.0.0",
     "tslint": "~5.11.0",
     "tslint-config-prettier": "~1.15.0",
     "tslint-plugin-prettier": "~2.0.1",
