--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-coat",
-  "version": "4.1.1",
+  "version": "4.1.2",
   "description": "Structured React + Redux with Typescript and support for isomorphic rendering beautifully(SSR)",
   "main": "build/dist/index.js",
   "module": "build/es5/index.js",
@@ -26,17 +26,17 @@
     "node": ">=8.0.0"
   },
   "peerDependencies": {
-    "@types/node": "^9.0.0 || ^10.0.0",
+    "@types/node": "^9.0.0 || ^10.0.0  || ^11.0.0",
     "@types/history": "^4.0.0",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
-    "@types/react-redux": "^5.0.0 || ^6.0.0",
+    "@types/react-redux": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "@types/react-router-dom": "^4.0.0",
-    "connected-react-router": "^4.0.0 || ^5.0.0",
+    "connected-react-router": "^5.0.0 || ^6.0.0",
     "history": "^4.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-redux": "^5.0.0 || ^6.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.0.0 || ^4.0.0"
   },
@@ -45,10 +45,10 @@
     "@types/enzyme": "~3.1.18",
     "@types/enzyme-adapter-react-16": "~1.0.4",
     "@types/jest": "~24.0.6",
-    "@types/node": "~10.12.2",
-    "@types/react": "~16.8.3",
-    "@types/react-dom": "~16.0.9",
-    "@types/react-redux": "~6.0.9",
+    "@types/node": "~11.9.4",
+    "@types/react": "~16.8.4",
+    "@types/react-dom": "~16.8.2",
+    "@types/react-redux": "~7.0.1",
     "@types/react-router-dom": "~4.3.1",
     "babel-eslint": "~10.0.1",
     "chalk": "~2.4.1",
@@ -64,9 +64,9 @@
     "history": "~4.7.2",
     "jest": "~24.1.0",
     "prettier": "~1.15.2",
-    "react": "~16.5.0",
-    "react-dom": "~16.5.0",
-    "react-redux": "~5.1.0",
+    "react": "~16.8.2",
+    "react-dom": "~16.8.2",
+    "react-redux": "~5.1.1",
     "react-router-dom": "~4.3.1",
     "redux": "~4.0.1",
     "ts-jest": "~24.0.0",
