--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-coat",
-  "version": "4.1.2",
+  "version": "4.1.3",
   "description": "Structured React + Redux with Typescript and support for isomorphic rendering beautifully(SSR)",
   "main": "build/dist/index.js",
   "module": "build/es5/index.js",
@@ -52,7 +52,7 @@
     "@types/react-router-dom": "~4.3.1",
     "babel-eslint": "~10.0.1",
     "chalk": "~2.4.1",
-    "connected-react-router": "~5.0.1",
+    "connected-react-router": "^6.3.1",
     "enzyme": "~3.9.0",
     "enzyme-adapter-react-16": "~1.9.1",
     "eslint": "~5.8.0",
@@ -66,7 +66,7 @@
     "prettier": "~1.15.2",
     "react": "~16.8.2",
     "react-dom": "~16.8.2",
-    "react-redux": "~5.1.1",
+    "react-redux": "^6.0.1",
     "react-router-dom": "~4.3.1",
     "redux": "~4.0.1",
     "ts-jest": "~24.0.0",
